Fix Heroku memory errors * Remove a bunch of gems * Event summary styling to get rid of truncate_html gem

--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -23,12 +23,6 @@ body {
   }
 }
 
-.event_pic {
-  float: left;
-  max-width: 20em;
-  max-height: 20em;
-}
-
 .float-left {
   float: left;
 }
